23 July 2024: Yorgos
	- Fix #1106: ratelimit-below-domain logs the wrong FROM address.

19 July 2024: Wouter
	- Add dnstap-sample-rate that logs only 1/N messages, for high volume
	  server environments. Thanks Dan Luther.
	- Fix dnstap wakeup, a running wakeup timer is left to expire and not
	  increased, a timer is started when the dtio thread is sleeping,
	  the timer set disabled when the dtio thread goes to sleep, and
	  after sleep the thread checks to see if there are messages to log
	  immediately.

16 July 2024: Wouter
	- For #1103: Fix to drop mesh state reference for the http2 stream
	  associated with the reply, not the currently active stream. And
	  it does not remove it twice on a mesh_send_reply call. The reply
	  h2_stream is NULL when not in use, for more initialisation.

15 July 2024: Wouter
	- For #1103: fix to also drop mesh state reference when the discard
	  limit is reached, when there is an error making a new recursion
	  state and when the connection is dropped with is_drop.

12 July 2024: Yorgos
	- Add RPZ tag tests in acl_interface.tdir.
	- For #1102: clearer text for using interface-* options for the
	  loopback interface.

12 July 2024: Wouter
	- Fix #1103: unbound 1.20.0 segmentation fault with nghttp2.
	- For #1103: fix to also drop mesh state reference when a h2 reply is
	  dropped.

10 July 2024: Wouter
	- For #773: In contrib/unbound.service.in set unbound to start after
	  network-online.target. Also for contrib/unbound_portable.service.in.

9 July 2024: Yorgos
	- Update list of known EDE codes.

8 July 2024: Wouter
	- Fix that validation reason failure that uses string print uses
	  separate buffer that is passed, from the scratch validation buffer.
	- Fixup algo_needs_reason string buffer length.
	- Fix shadowed error string variable in validator dnskey handling.

5 July 2024: Yorgos
	- Don't check for message TTL changes if the RRsets remain the same.

5 July 2024: Wouter